--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 瘸子林的博客 | Jimmy Blog
 header-img: img/post-bg-desk.jpg
 email: binglin1219@163.com
 description: "Talk is cheap, Show me the code."
-keyword: "Jimmy, Jimmy Blog, 瘸子林的博客, 林丙, linbing, iOS, Apple, iPhone"
+keyword: "Jimmy, Jimmy Blog, 瘸子林的博客, 林丙, linbing, java, python, devops"
 url: "http://linbing1219.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/linbing1219/linbing1219.github.io.git" # you code repository
@@ -99,16 +99,10 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "WY",
-        href: "http://zhengwuyang.com"
+        title: "hadoop",
+        href: "https://github.com/apache/hadoop"
     },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
-    },{
-        title: "Apple",
-        href: "https://apple.com"
-    },{
-        title: "Apple Developer",
-        href: "https://developer.apple.com/"
+        title: "spring",
+        href: "https://github.com/spring/spring"
     }
 ]
