--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Jimmy Blog
-SEOTitle: 瘸子林的博客 | Jimmy Blog
+title: Jimmylin Blog
+SEOTitle: 瘸子林的博客 | Jimmylin Blog
 header-img: img/post-bg-desk.jpg
 email: binglin1219@163.com
 description: "Talk is cheap, Show me the code."
-keyword: "Jimmy, Jimmy Blog, 瘸子林的博客, 林丙, linbing, java, python, devops"
+keyword: "Jimmylin, Jimmylin Blog, 瘸子林的博客, 林丙, linbing, java, python, devops"
 url: "http://linbing1219.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/linbing1219/linbing1219.github.io.git" # you code repository
