delete useless picture

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Jimmylin Blog
 SEOTitle: 瘸子林的博客 | Jimmylin Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/computer-with-landscape-on-screen-and-mobile-phone-on-wooden-table.jpg
 email: binglin1219@163.com
 description: "Talk is cheap, Show me the code."
 keyword: "Jimmylin, Jimmylin Blog, 瘸子林的博客, 林丙, linbing, java, python, devops"
