--- a/_config.yml
+++ b/_config.yml
@@ -57,16 +57,16 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-disqus_username: linbing
+# disqus_username: linbing
 
 # Gitalk
 gitalk:
-  enable: false    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
-  admin: qiubaiying
+  enable: true    #是否开启Gitalk评论
+  clientID: a9c23aa7c90372593346                            #生成的clientID
+  clientSecret: ea756e8a167cb0507b2444f63b4c470b36232bf2    #生成的clientSecret
+  repo: linbing1219.github.io    #仓库名称
+  owner: linbing1219    #github用户名
+  admin: linbing1219
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
